# minuet-tracer

./: .gitignore  BallQuery.md  ORIGINAL ALGORITHM  README.md  Untitled-5  analytical_intuitions.py  bq_config.json  bq_config.py  bq_gather.py  bq_kmap_reader.py  bq_mapping.py  config.json  coord.py  gemms_trace_reader.py  kernel_map_reader.py  main_bq.py  main_minuet.py  map_trace_reader.py  mem_trace_reader.py  metadata_reader.py  minuet.py  minuet_config.py  minuet_gather.py  minuet_mapping.py  minuet_trace.py  minuet_utils.py  octree_analysis.md  output.simbin  read_pcl.py  sorted_dict.py  test_config_reload.py  test_max_points.py  test_minuet.py  test_performance.py  trace_reader.py
.github/workflows/: CI.yml
bq_out/: ball_query_gather_stats.json
c++/: CMakeLists.txt  config.json  minuet_trace.py
c++/include/: coord.hpp  minuet_config.hpp  minuet_gather.hpp  minuet_map.hpp  minuet_trace.hpp  sorted_map.hpp  trace.hpp
c++/include/ext/: a.out  test_args.cpp
c++/src/: coord.cpp  main.cpp  mem_trace_reader.cpp  minuet_bindings.cpp  minuet_config.cpp  minuet_gather.cpp  minuet_map.cpp  minuet_trace.cpp
docs/: minuet.md  test_mask.py
examples/large/: 000455.simbin  000535.simbin  001390.simbin  001705.simbin  001955.simbin  002200.simbin  002400.simbin  002880.simbin  004035.simbin  004270.simbin
examples/medium/: 000115.simbin  001235.simbin  001330.simbin  002660.simbin  003355.simbin  003580.simbin  003640.simbin  004140.simbin  004450.simbin  004535.simbin
examples/small/: 000280.simbin  000610.simbin  000650.simbin  002550.simbin  002555.simbin  002760.simbin  003360.simbin  003450.simbin  003625.simbin  003885.simbin
mac-vs-time/: 2d_macs.py  3D_Network_Configurations.md  3D_Network_Configurations_tmp.html  cenet_layers.csv  compare_2d_vs_3d_macs.py  gather_vs_gemm_analysis.py  largekernel3d_gemm_layers.csv  largekernel3d_layers.csv  mapping_vs_gemm_first_layer.py  minkowskinet_gemm_layers.csv  minkowskinet_layers.csv  pcl_macs.py  polarnet_layers.csv  rangenetpp_layers.csv  rsn_gemm_layers.csv  rsn_layers.csv  salsanext_layers.csv  sparsity_comparison_2d_vs_3d.py  spvnas_gemm_layers.csv  spvnas_layers.csv  squeezeseg_layers.csv  test_gather_timing.py  test_gemm_performance.py  voxelnext_gemm_layers.csv  voxelnext_layers.csv
